--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
               	Empowering Thought Leaders Worldwide at The World Influencers Council.
             </h2> -->
             <h2>
-              STRENGTH <br> IN LEADERSHIP, <br> UNITY IN DIVERSITY
+              WOMEN LEADING <br> WITH PURPOSE <br> AND PASSION
             </h2>
           </div>
         </div>
